Adding about page and other images.

--- a/src/app/orkinbrown/home/orkinbrown.home.component.html
+++ b/src/app/orkinbrown/home/orkinbrown.home.component.html
@@ -80,10 +80,10 @@
     <div class="container">
         <h2 class="title">Meet our partners</h2>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/orkinbrown/home/hilton.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
@@ -104,34 +104,34 @@
                 </div>
             </div>
 
-            <!-- <div class="col-md-4">
+            <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/faces/joe-gardner-2.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/orkinbrown/home/tysie.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
                             <div class="author">
-                                <h4 class="card-title">Chloe Orkin</h4>
+                                <h4 class="card-title">Tyson Orkin</h4>
                                 <h6 class="card-category">Partner</h6>
                             </div>
                         </a>
                         <p class="card-description text-center">
-                        She actually doesn't like Hilton but still married him, hey Mum?
+                        He will sniff out your tax return.
                         </p>
                     </div>
-                    <div class="card-footer text-center">
+                    <!-- <div class="card-footer text-center">
                         <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
                         <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
                         <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
-                    </div> 
+                    </div>  -->
                 </div>
-            </div> -->
+            </div>
 
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/faces/erik-lucatero-2.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/orkinbrown/home/tappy.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
@@ -144,11 +144,6 @@
                         Howdy, partner!
                         </p>
                     </div>
-                    <!-- <div class="card-footer text-center">
-                        <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                        <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
-                        <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
-                    </div> -->
                 </div>
             </div>
         </div>
