--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-lg bg-info fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
         <div class="navbar-translate">
-            <li class="nav-item" *ngIf="!isDocumentation()">
-                <a [routerLink]="['/orkinbrown']"><img src="./assets/img/orkinbrown/nav/logo-white.png" alt="Orkin Brown logo"></a>
-            </li>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a [routerLink]="['/ob']"><img src="./assets/img/orkinbrown/nav/logo-white.png" alt="Orkin Brown logo"></a>
+                </li>
+            </ul>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
                 <span class="navbar-toggler-bar"></span>
                 <span class="navbar-toggler-bar"></span>
@@ -12,6 +14,9 @@
         </div>
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a [routerLink]="['/ob/about']" class="nav-link" target="_blank"><i class="nc-icon nc-circle-10"></i>About Us</a>
+                </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i> Documentation</a>
                 </li>
