Adding other pages, navbar updates, home updates.

--- a/src/app/orkinbrown/home/orkinbrown.home.component.html
+++ b/src/app/orkinbrown/home/orkinbrown.home.component.html
@@ -1,12 +1,11 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/orkinbrown/home/background.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/orkinbrown/home/background-giraffes.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
             <h1>Orkin Brown & Associates</h1>
-            <h3>Give us your fkn money.</h3>
+            <h3>Experience and passion.</h3>
             <br />
-            <!-- <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-outline-neutral btn-round"><i class="fa fa-play"></i>Watch video</a>
-            <button type="button" class="btn btn-outline-neutral btn-round">Download</button> -->
+            <a href="#ob/contact" class="btn btn-outline-neutral btn-round"><i class="fa fa-phone-square"></i>Get in touch</a>
         </div>
     </div>
 </div>
@@ -18,7 +17,20 @@
                 <h2 class="title">A little about us</h2>
                 <h5 class="description">Orkin Brown and Associates is an audit, accounting and tax practice based out of 43 St Margaret Road, Edenvale, Gauteng. The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA). Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
                 <br>
-                <a href="#paper-kit" class="btn btn-info btn-round">See Details</a>
+                <a href="#ob/about" class="btn btn-info btn-round">Learn more</a>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="section section-gray text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 mr-auto ml-auto">
+                <h2 class="title">What we do</h2>
+                <h5 class="description">Orkin Brown and Associates offer a range of services for our clients.</h5>
+                <br>
             </div>
         </div>
         <br/><br/>
@@ -30,8 +42,8 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Accounting</h4>
-                        <p class="description">Spend your time generating new ideas. You don't have to think of implementing.</p>
-                        <a href="#pkp" class="btn btn-link btn-info">See more</a>
+                        <p class="description">A small blurb to do with accounting.</p>
+                        <a href="#ob/services" class="btn btn-link btn-info">See more</a>
                     </div>
                 </div>
             </div>
@@ -42,8 +54,8 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Taxation</h4>
-                        <p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient.</p>
-                        <a href="#pkp" class="btn btn-link btn-info">See more</a>
+                        <p class="description">A small blurb to do with taxation.</p>
+                        <a href="#ob/services" class="btn btn-link btn-info">See more</a>
                     </div>
                 </div>
             </div>
@@ -54,8 +66,8 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Auditing</h4>
-                        <p>Choose from a veriety of many colors resembling sugar paper pastels.</p>
-                        <a href="#pkp" class="btn btn-link btn-info">See more</a>
+                        <p class="description">A small blurb to do with auditing.</p>
+                        <a href="#ob/services" class="btn btn-link btn-info">See more</a>
                     </div>
                 </div>
             </div>
@@ -66,13 +78,12 @@
                     </div>
                     <div class="description">
                         <h4 class="info-title">Advisory</h4>
-                        <p>Find unique and handmade delightful designs related items directly from our sellers.</p>
-                        <a href="#pkp" class="btn btn-link btn-info">See more</a>
+                        <p class="description">A small blurb to do with advisory.</p>
+                        <a href="#ob/services" class="btn btn-link btn-info">See more</a>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 
@@ -96,11 +107,6 @@
                         Lil' H.
                         </p>
                     </div>
-                    <!-- <div class="card-footer text-center">
-                        <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                        <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
-                        <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
-                    </div> -->
                 </div>
             </div>
 
@@ -120,11 +126,6 @@
                         He will sniff out your tax return.
                         </p>
                     </div>
-                    <!-- <div class="card-footer text-center">
-                        <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
-                        <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
-                        <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
-                    </div>  -->
                 </div>
             </div>
 
@@ -147,9 +148,33 @@
                 </div>
             </div>
         </div>
+        <!-- <div class="row">
+            <div class="motto text-center">
+                <a href="#ob/team" class="btn btn-outline-neutral btn-round"><i class="fa fa-users"></i>Meet the team</a>
+            </div>
+        </div> -->
+        <div class="row">
+            <div class="col-md-8 mr-auto ml-auto">
+                <a href="#ob/team" class="btn btn-neutral btn-round"><i class="fa fa-users"></i>Meet the team</a>
+            </div>
+        </div>
     </div>
 </div>
 
+<div class="section section-gray text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 mr-auto ml-auto">
+                <h2 class="title">See some testimonials</h2>
+                <h5 class="description">Don't take our word for it. Check out some customer testimonials. We are lekker.</h5>
+                <br>
+                <a href="#ob/testimonials" class="btn btn-info btn-round"><i class="fa fa-comments-o"></i>Testimonials</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div>
     <div class="section landing-section">
         <div class="container">
             <div class="row">
@@ -177,7 +202,7 @@
                             </div>
                         </div>
                         <label>Message</label>
-                        <textarea class="form-control" rows="4" placeholder="Tell us your thoughts and feelings..."></textarea>
+                        <textarea class="form-control" rows="4" placeholder="Tell us what you need..."></textarea>
                         <div class="row">
                             <div class="col-md-4 mr-auto ml-auto">
                                 <button class="btn btn-info btn-lg btn-fill">Send Message</button>
