--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,28 +15,30 @@
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a [routerLink]="['/ob/about']" class="nav-link" target="_blank"><i class="nc-icon nc-circle-10"></i>About Us</a>
+                    <a [routerLink]="['/ob/jobs']" class="nav-link" style="color: #f9f871;"><i class="nc-icon nc-alert-circle-i important"></i>We're Hiring</a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link" target="_blank"><i class="nc-icon nc-book-bookmark"></i> Documentation</a>
+                <li class="nav-item">
+                    <a [routerLink]="['/ob/about']" class="nav-link"><i class="nc-icon nc-circle-10"></i>About Us</a>
                 </li>
-                <li class="nav-item" *ngIf="isHome()">
-                    <a href="https://www.creative-tim.com/product/paper-kit-2-pro-angular?ref=pk2-angular-free-local" target="_blank" class="btn btn-danger btn-round">Upgrade to Pro</a>
+                <li class="nav-item">
+                    <a [routerLink]="['/ob/services']" class="nav-link"><i class="nc-icon nc-ruler-pencil"></i>Services</a>
                 </li>
-                <li class="nav-item" *ngIf="!isHome()">
-                    <a [routerLink]="['/home']" *ngIf="!isDocumentation()" class="nav-link"><i class="nc-icon nc-layout-11"></i>Components</a>
-                    <a [routerLink]="['/home']" *ngIf="isDocumentation()" class="nav-link">Back to Kit</a>
+                <li class="nav-item">
+                    <a [routerLink]="['/ob/team']" class="nav-link"><i class="nc-icon nc-badge"></i>Team</a>
                 </li>
-                <li class="nav-item" *ngIf="isDocumentation()">
-                    <a href="https://github.com/creativetimofficial/paper-kit-2-angular/issues?ref=pk2-free-local" target="_blank" class="nav-link">Have an issue</a>
+                <li class="nav-item">
+                    <a [routerLink]="['/ob/testimonials']" class="nav-link"><i class="nc-icon nc-satisfied"></i>Testimonials</a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
+                <li class="nav-item">
+                    <a [routerLink]="['/ob/contact']" class="nav-link"><i class="nc-icon nc-email-85"></i>Contact</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom" href="https://www.linkedin.com/company/orkin-brown-and-assoc/" target="_blank">
                         <i class="fa fa-linkedin-square"></i>
                         <p class="d-lg-none">LinkedIn</p>
                     </a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
+                <li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/profile.php?id=100054344299467" target="_blank">
                         <i class="fa fa-facebook-square"></i>
                         <p class="d-lg-none">Facebook</p>
