Filling out the other pages.

--- a/src/app/orkinbrown/jobs/orkinbrown.jobs.component.html
+++ b/src/app/orkinbrown/jobs/orkinbrown.jobs.component.html
@@ -3,25 +3,83 @@
     <div class="container">
         <div class="motto text-center">
             <h1>Positions Available</h1>
-            <!-- <h3>South Africa's premier audit, accounting and tax practice. Plus, a cute dog.</h3> -->
             <br />
-             <!-- <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-outline-neutral btn-round"><i class="fa fa-play"></i>Watch video</a>
-            <button type="button" class="btn btn-outline-neutral btn-round">Download</button>  -->
         </div>
     </div>
 </div>
 <div class="main">
     <div class="section text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="title">We're currently hiring for the following positions</h2>
-                <!-- <h5 class="description">Orkin Brown and Associates is an audit, accounting and tax practice based out of 43 St Margaret Road, Edenvale, Gauteng. The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA). Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
-                <br>
-                <h5 class="description">We have been in business for over blah years...</h5> -->
-                <!-- <a href="#paper-kit" class="btn btn-info btn-round">See Details</a> -->
+        <div class="container">
+            <!-- <div class="row">
+                <div class="col-md-8 mr-auto ml-auto">
+                    <h2 class="title">We're currently hiring for the following positions</h2>
+                </div>
+            </div> -->
+            <div class="row">
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="rounded job-card">
+                        <h4>Role Title</h4>
+                        <br/>
+                        <p><b>3-5 years' experience</b></p>
+                        <p><b>Office-based (not remote)</b></p>
+                        <p>We are looking for an experienced, driven accountant, with the following skills:</p>
+                        <ul>
+                            <li>Standards of accounting - IRBA certified</li>
+                            <li>Knowledge of regulatory standards</li>
+                            <li>General business knowledge</li>
+                            <li>Software proficiency</li>
+                            <li>Data analysis</li>
+                            <li>Attention to detail</li>
+                            <li>Critical thinking</li>
+                        </ul>
+                        <p>We pay competitive rates.</p>
+                        <br/>
+                        <a href="#pkp" class="btn btn-warning btn-round">Apply Now</a>
+                    </div>
+                </div>
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="rounded job-card">
+                        <h4>Role Title</h4>
+                        <br/>
+                        <p><b>3-5 years' experience</b></p>
+                        <p><b>Office-based (not remote)</b></p>
+                        <p>We are looking for an experienced, driven accountant, with the following skills:</p>
+                        <ul>
+                            <li>Standards of accounting - IRBA certified</li>
+                            <li>Knowledge of regulatory standards</li>
+                            <li>General business knowledge</li>
+                            <li>Software proficiency</li>
+                            <li>Data analysis</li>
+                            <li>Attention to detail</li>
+                            <li>Critical thinking</li>
+                        </ul>
+                        <p>We pay competitive rates.</p>
+                        <br/>
+                        <a href="#pkp" class="btn btn-warning btn-round">Apply Now</a>
+                    </div>
+                </div>
+                <div class="col-md-4 mr-auto ml-auto">
+                    <div class="rounded job-card">
+                        <h4>Role Title</h4>
+                        <br/>
+                        <p><b>3-5 years' experience</b></p>
+                        <p><b>Office-based (not remote)</b></p>
+                        <p>We are looking for an experienced, driven accountant, with the following skills:</p>
+                        <ul>
+                            <li>Standards of accounting - IRBA certified</li>
+                            <li>Knowledge of regulatory standards</li>
+                            <li>General business knowledge</li>
+                            <li>Software proficiency</li>
+                            <li>Data analysis</li>
+                            <li>Attention to detail</li>
+                            <li>Critical thinking</li>
+                        </ul>
+                        <p>We pay competitive rates.</p>
+                        <br/>
+                        <a href="#pkp" class="btn btn-warning btn-round">Apply Now</a>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
 </div>
