--- a/src/app/orkinbrown/jobs/orkinbrown.jobs.component.scss
+++ b/src/app/orkinbrown/jobs/orkinbrown.jobs.component.scss
@@ -1,3 +1,10 @@
-.job-pane {
-    color: #070915;
+.job-card {
+    color: #fff;
+    // background: #1e2654;
+    background: #444444;
+    padding: 20px;
+}
+
+h4, .h4 {
+    margin: 0px;
 }
