--- a/src/app/orkinbrown/testimonials/orkinbrown.testimonials.component.html
+++ b/src/app/orkinbrown/testimonials/orkinbrown.testimonials.component.html
@@ -3,75 +3,63 @@
     <div class="container">
         <div class="motto text-center">
             <h1>Testimonials</h1>
-            <h3>South Africa's premier audit, accounting and tax practice. Plus, a cute dog.</h3>
             <br />
-             <!-- <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-outline-neutral btn-round"><i class="fa fa-play"></i>Watch video</a>
-            <button type="button" class="btn btn-outline-neutral btn-round">Download</button>  -->
         </div>
     </div>
 </div>
 <div class="main">
     <div class="section text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="title">A little about us</h2>
-                <h5 class="description">Orkin Brown and Associates is an audit, accounting and tax practice based out of 43 St Margaret Road, Edenvale, Gauteng. The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA). Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
-                <br>
-                <a href="#paper-kit" class="btn btn-info btn-round">See Details</a>
-            </div>
-        </div>
-        <br/><br/>
-        <div class="row">
-            <div class="col-md-3">
-                <div class="info">
-                    <div class="icon icon-info">
-                        <i class="nc-icon nc-album-2"></i>
-                    </div>
-                    <div class="description">
-                        <h4 class="info-title">Accounting</h4>
-                        <p class="description">Spend your time generating new ideas. You don't have to think of implementing.</p>
-                        <a href="#pkp" class="btn btn-link btn-info">See more</a>
-                    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mr-auto ml-auto">
+                    <h2 class="title">Don't take our word for it - hear from our satisfied clients</h2>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="info">
-                    <div class="icon icon-info">
-                        <i class="nc-icon nc-bulb-63"></i>
-                    </div>
-                    <div class="description">
-                        <h4 class="info-title">Taxation</h4>
-                        <p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient.</p>
-                        <a href="#pkp" class="btn btn-link btn-info">See more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info">
-                    <div class="icon icon-info">
-                        <i class="nc-icon nc-chart-bar-32"></i>
-                    </div>
-                    <div class="description">
-                        <h4 class="info-title">Auditing</h4>
-                        <p>Choose from a veriety of many colors resembling sugar paper pastels.</p>
-                        <a href="#pkp" class="btn btn-link btn-info">See more</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info">
-                    <div class="icon icon-info">
-                        <i class="nc-icon nc-sun-fog-29"></i>
-                    </div>
-                    <div class="description">
-                        <h4 class="info-title">Advisory</h4>
-                        <p>Find unique and handmade delightful designs related items directly from our sellers.</p>
-                        <a href="#pkp" class="btn btn-link btn-info">See more</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <div class="row">
 
+                <div class="col-md-6 mr-auto ml-auto">
+                    <div class="rounded job-card">
+                        <h4>Review Title</h4>
+                        <br/>
+                        <p><b>"Great service!"</b></p>
+                        <br/>
+                        <p>If you want to take your business to the next level, use Orkin Brown and Associates and don't look any further.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 mr-auto ml-auto">
+                    <div class="rounded job-card">
+                        <h4>Review Title</h4>
+                        <br/>
+                        <p><b>"Nothing but love!"</b></p>
+                        <br/>
+                        <p>Everyone's on the same page. Many of our people are not very organized naturally, so Orkin Brown and Associates is a godsend!</p>
+                    </div>
+                </div>
+            
+            </div>
+            <br/>
+            <div class="row">
+
+                <div class="col-md-6 mr-auto ml-auto">
+                    <div class="rounded job-card">
+                        <h4>Review Title</h4>
+                        <br/>
+                        <p><b>"Cracking job!"</b></p>
+                        <br/>
+                        <p>With Orkin Brown and Associates, we have finally accomplished things that have been waiting forever to get done.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 mr-auto ml-auto">
+                    <div class="rounded job-card">
+                        <h4>Review Title</h4>
+                        <br/>
+                        <p><b>"Brilliant!"</b></p>
+                        <br/>
+                        <p>I would recommend Orkin Brown and Associates for anyone trying to get the word out about their business. It has saved me so much time!</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
