Updates to home.

--- a/src/app/orkinbrown/home/orkinbrown.home.component.html
+++ b/src/app/orkinbrown/home/orkinbrown.home.component.html
@@ -43,7 +43,7 @@
                     <div class="description">
                         <h4 class="info-title">Accounting</h4>
                         <p class="description">A small blurb to do with accounting.</p>
-                        <a href="#ob/services" class="btn btn-link btn-info">See more</a>
+                        <!-- <a href="#ob/services" class="btn btn-link btn-info">See more</a> -->
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                     <div class="description">
                         <h4 class="info-title">Taxation</h4>
                         <p class="description">A small blurb to do with taxation.</p>
-                        <a href="#ob/services" class="btn btn-link btn-info">See more</a>
+                        <!-- <a href="#ob/services" class="btn btn-link btn-info">See more</a> -->
                     </div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                     <div class="description">
                         <h4 class="info-title">Auditing</h4>
                         <p class="description">A small blurb to do with auditing.</p>
-                        <a href="#ob/services" class="btn btn-link btn-info">See more</a>
+                        <!-- <a href="#ob/services" class="btn btn-link btn-info">See more</a> -->
                     </div>
                 </div>
             </div>
@@ -79,9 +79,15 @@
                     <div class="description">
                         <h4 class="info-title">Advisory</h4>
                         <p class="description">A small blurb to do with advisory.</p>
-                        <a href="#ob/services" class="btn btn-link btn-info">See more</a>
+                        <!-- <a href="#ob/services" class="btn btn-link btn-info">See more</a> -->
                     </div>
                 </div>
+            </div>
+        </div>
+        <br />
+        <div class="row">
+            <div class="col-md-8 mr-auto ml-auto">
+                <a href="#ob/services" class="btn btn-info btn-round"><i class="fa fa-briefcase"></i>See our services</a>
             </div>
         </div>
     </div>
@@ -153,6 +159,7 @@
                 <a href="#ob/team" class="btn btn-outline-neutral btn-round"><i class="fa fa-users"></i>Meet the team</a>
             </div>
         </div> -->
+        <br />
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
                 <a href="#ob/team" class="btn btn-neutral btn-round"><i class="fa fa-users"></i>Meet the team</a>
