--- a/src/app/orkinbrown/contact/orkinbrown.contact.component.html
+++ b/src/app/orkinbrown/contact/orkinbrown.contact.component.html
@@ -39,7 +39,7 @@
                         <textarea class="form-control" rows="4" placeholder="Tell us what you need..."></textarea>
                         <div class="row">
                             <div class="col-md-4 mr-auto ml-auto">
-                                <button class="btn btn-info btn-lg btn-fill">Send Message</button>
+                                <button class="btn btn-info btn-round btn-lg">Send Message</button>
                             </div>
                         </div>
                     </form>
