--- a/src/app/orkinbrown/home/orkinbrown.home.component.html
+++ b/src/app/orkinbrown/home/orkinbrown.home.component.html
@@ -17,7 +17,7 @@
                 <h2 class="title">A little about us</h2>
                 <h5 class="description">Orkin Brown and Associates is an audit, accounting and tax practice based out of 43 St Margaret Road, Edenvale, Gauteng. The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA). Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
                 <br>
-                <a href="#ob/about" class="btn btn-info btn-round">Learn more</a>
+                <a href="#ob/about" class="btn btn-info btn-round"><i class="fa fa-info-circle"></i>Learn More</a>
             </div>
         </div>
 
@@ -43,7 +43,6 @@
                     <div class="description">
                         <h4 class="info-title">Accounting</h4>
                         <p class="description">A small blurb to do with accounting.</p>
-                        <!-- <a href="#ob/services" class="btn btn-link btn-info">See more</a> -->
                     </div>
                 </div>
             </div>
@@ -55,7 +54,6 @@
                     <div class="description">
                         <h4 class="info-title">Taxation</h4>
                         <p class="description">A small blurb to do with taxation.</p>
-                        <!-- <a href="#ob/services" class="btn btn-link btn-info">See more</a> -->
                     </div>
                 </div>
             </div>
@@ -67,7 +65,6 @@
                     <div class="description">
                         <h4 class="info-title">Auditing</h4>
                         <p class="description">A small blurb to do with auditing.</p>
-                        <!-- <a href="#ob/services" class="btn btn-link btn-info">See more</a> -->
                     </div>
                 </div>
             </div>
@@ -79,7 +76,6 @@
                     <div class="description">
                         <h4 class="info-title">Advisory</h4>
                         <p class="description">A small blurb to do with advisory.</p>
-                        <!-- <a href="#ob/services" class="btn btn-link btn-info">See more</a> -->
                     </div>
                 </div>
             </div>
@@ -154,11 +150,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="row">
-            <div class="motto text-center">
-                <a href="#ob/team" class="btn btn-outline-neutral btn-round"><i class="fa fa-users"></i>Meet the team</a>
-            </div>
-        </div> -->
         <br />
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
@@ -212,7 +203,7 @@
                         <textarea class="form-control" rows="4" placeholder="Tell us what you need..."></textarea>
                         <div class="row">
                             <div class="col-md-4 mr-auto ml-auto">
-                                <button class="btn btn-info btn-lg btn-fill">Send Message</button>
+                                <a href="#ob" class="btn btn-info btn-round btn-lg"><i class="fa fa-envelope"></i>Send Message</a>
                             </div>
                         </div>
                     </form>
