--- a/src/assets/sass/paper-kit/_sections.scss
+++ b/src/assets/sass/paper-kit/_sections.scss
@@ -9,6 +9,10 @@
 .section-gray{
     background-color: #EEEEEE;
 }
+.section-dark-gray{
+    background-color: #444444;
+    // color: #fff;
+}
 .section-nude{
     background-color: $bg-nude;
 }
