--- a/src/assets/sass/paper-kit/_variables.scss
+++ b/src/assets/sass/paper-kit/_variables.scss
@@ -44,7 +44,8 @@ $primary-states-color:       darken($primary-color, 10%) !default;
 $success-color:              #6bd098 !default;
 $success-states-color:       darken($success-color, 10%) !default;
 
-$info-color:                 #151a3a !default; 
+// $info-color:                 #151a3a !default; 
+$info-color:                 #2B3D4A !default; 
 // $info-color:                 #232B5F !default;
 $info-states-color:          darken($info-color, 10%) !default;
 
