--- a/src/app/orkinbrown/home/orkinbrown.home.component.html
+++ b/src/app/orkinbrown/home/orkinbrown.home.component.html
@@ -1,21 +1,23 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/orkinbrown/home/background-giraffes.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/orkinbrown/home/background-beach.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
-            <h1>Orkin Brown & Associates</h1>
-            <h3>Experience and passion.</h3>
+            <h1>Orkin Brown & Associates Inc.</h1>
+            <h3>Registered Auditors & Chartered Accountants (SA)</h3>
             <br />
-            <a href="#ob/contact" class="btn btn-outline-neutral btn-round"><i class="fa fa-phone-square"></i>Get in touch</a>
+            <a href="#ob/contact" class="btn btn-outline-neutral btn-lg btn-round"><i class="fa fa-phone-square"></i>Get in touch</a>
         </div>
     </div>
 </div>
 <div class="main">
-    <div class="section text-center">
+    <div class="section section-gray text-center">
     <div class="container">
         <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
-                <h2 class="title">A little about us</h2>
-                <h5 class="description">Orkin Brown and Associates is an audit, accounting and tax practice based out of 43 St Margaret Road, Edenvale, Gauteng. The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA). Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
+                <h2 class="title">About Us</h2>
+                <h5>Orkin Brown and Associates is an audit, accounting and tax practice based out of 43 St Margaret Road, Edenvale, Gauteng.</h5>
+                <h5>The practice is registered with the Independent Regulatory Board for Auditors (IRBA). It is also an accredited training office with the South African Institute of Chartered Accountants (SAICA).</h5>
+                <h5>Orkin Brown and Associates performs independent audit, independent reviews as well as compilation reports for a wide range of clients across various industries.</h5>
                 <br>
                 <a href="#ob/about" class="btn btn-info btn-round"><i class="fa fa-info-circle"></i>Learn More</a>
             </div>
@@ -173,40 +175,14 @@
 </div>
 
 <div>
-    <div class="section landing-section">
+    <div class="section landing-section text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
-                    <h2 class="text-center">Get in touch</h2>
-                    <form class="contact-form">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <label>Name</label>
-                                <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                                    <div class="input-group-prepend">
-                                      <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
-                                    </div>
-                                    <input type="text" class="form-control" placeholder="Name" (focus)="focus=true" (blur)="focus=false" >
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <label>Email</label>
-                                <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
-                                    <div class="input-group-prepend">
-                                      <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
-                                    </div>
-                                    <input type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
-                                </div>
-                            </div>
-                        </div>
-                        <label>Message</label>
-                        <textarea class="form-control" rows="4" placeholder="Tell us what you need..."></textarea>
-                        <div class="row">
-                            <div class="col-md-4 mr-auto ml-auto">
-                                <a href="#ob" class="btn btn-info btn-round btn-lg"><i class="fa fa-envelope"></i>Send Message</a>
-                            </div>
-                        </div>
-                    </form>
+                    <h2 class="title">Get in touch</h2>
+                    <h5 class="description">Want to get in touch? Contact us via phone, web form, or see our office locations.</h5>
+                    <br>
+                    <a href="#ob/contact" class="btn btn-info btn-round"><i class="fa fa-phone-square"></i>Contact us</a>
                 </div>
             </div>
         </div>
