--- a/src/app/orkinbrown/testimonials/orkinbrown.testimonials.component.scss
+++ b/src/app/orkinbrown/testimonials/orkinbrown.testimonials.component.scss
@@ -1,7 +1,8 @@
-.job-card {
+.testimonial {
     color: #fff;
-    background: #444444;
+    background: #385061;
     padding: 20px;
+    margin-bottom: 20px;
 }
 
 h4, .h4 {
