--- a/src/app/orkinbrown/jobs/orkinbrown.jobs.component.html
+++ b/src/app/orkinbrown/jobs/orkinbrown.jobs.component.html
@@ -10,73 +10,28 @@
 <div class="main">
     <div class="section text-center">
         <div class="container">
-            <!-- <div class="row">
+            <div class="row">
                 <div class="col-md-8 mr-auto ml-auto">
                     <h2 class="title">We're currently hiring for the following positions</h2>
+                    <h5>Applications will be made via email.</h5>
+                    <h5><b>Please remember to attach your resume before sending.</b></h5>
                 </div>
-            </div> -->
+            </div>
+            <br />
             <div class="row">
-                <div class="col-md-4 mr-auto ml-auto">
+                <div class="col-md-4 mr-auto ml-auto" *ngFor="let job of jobCards; let i = index">
                     <div class="rounded job-card">
-                        <h4>Role Title</h4>
+                        <h4>{{job.title}}</h4>
                         <br/>
-                        <p><b>3-5 years' experience</b></p>
-                        <p><b>Office-based (not remote)</b></p>
-                        <p>We are looking for an experienced, driven accountant, with the following skills:</p>
+                        <p><b>{{job.experience}}</b></p>
+                        <p><b>{{job.location}}</b></p>
+                        <p>The candidate should have the following skills:</p>
                         <ul>
-                            <li>Standards of accounting - IRBA certified</li>
-                            <li>Knowledge of regulatory standards</li>
-                            <li>General business knowledge</li>
-                            <li>Software proficiency</li>
-                            <li>Data analysis</li>
-                            <li>Attention to detail</li>
-                            <li>Critical thinking</li>
+                            <li *ngFor="let skill of job.skills; let j = index">{{skill}}</li>
                         </ul>
-                        <p>We pay competitive rates.</p>
+                        <p>{{job.pay}}</p>
                         <br/>
-                        <a href="#pkp" class="btn btn-warning btn-round">Apply Now</a>
-                    </div>
-                </div>
-                <div class="col-md-4 mr-auto ml-auto">
-                    <div class="rounded job-card">
-                        <h4>Role Title</h4>
-                        <br/>
-                        <p><b>3-5 years' experience</b></p>
-                        <p><b>Office-based (not remote)</b></p>
-                        <p>We are looking for an experienced, driven accountant, with the following skills:</p>
-                        <ul>
-                            <li>Standards of accounting - IRBA certified</li>
-                            <li>Knowledge of regulatory standards</li>
-                            <li>General business knowledge</li>
-                            <li>Software proficiency</li>
-                            <li>Data analysis</li>
-                            <li>Attention to detail</li>
-                            <li>Critical thinking</li>
-                        </ul>
-                        <p>We pay competitive rates.</p>
-                        <br/>
-                        <a href="#pkp" class="btn btn-warning btn-round">Apply Now</a>
-                    </div>
-                </div>
-                <div class="col-md-4 mr-auto ml-auto">
-                    <div class="rounded job-card">
-                        <h4>Role Title</h4>
-                        <br/>
-                        <p><b>3-5 years' experience</b></p>
-                        <p><b>Office-based (not remote)</b></p>
-                        <p>We are looking for an experienced, driven accountant, with the following skills:</p>
-                        <ul>
-                            <li>Standards of accounting - IRBA certified</li>
-                            <li>Knowledge of regulatory standards</li>
-                            <li>General business knowledge</li>
-                            <li>Software proficiency</li>
-                            <li>Data analysis</li>
-                            <li>Attention to detail</li>
-                            <li>Critical thinking</li>
-                        </ul>
-                        <p>We pay competitive rates.</p>
-                        <br/>
-                        <a href="#pkp" class="btn btn-warning btn-round">Apply Now</a>
+                        <a href="mailto:{{submissionEmail}}?subject=Application for the {{job.title}} role&body=Hi, %0D%0D My name is {INSERT_NAME} and I am applying for the role of {{job.title}}. %0D%0D You can contact me on {PHONE_NUMBER} and/or {EMAIL}. %0D%0D Please find my attached resume (please attach!) %0D%0D Thanks" class="btn btn-warning btn-round">Apply Now</a>
                     </div>
                 </div>
             </div>
